Bug 573937 - [17] Scope of Switch Pattern
Change-Id: Id0cbd20c9631214f032aefba3ebfaf59ab520e7f
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>
Reviewed-on: https://git.eclipse.org/r/c/jdt/eclipse.jdt.core/+/182638
Tested-by: JDT Bot <jdt-bot@eclipse.org>